k8s/_templates/new-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${SERVICE_NAME}
  namespace: ${NS_APPS}
  annotations:
    ${TLS_ANNOTATION}
spec:
  ingressClassName: nginx
${TLS_SECTION}
  rules:
    - host: ${INGRESS_HOST}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ${SERVICE_NAME}
                port: {name: http}
